--- a/src/Services/OrderService/Order.API/appsettings.json
+++ b/src/Services/OrderService/Order.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "RabbitMQ": {
-    "ConnectionStrings": "amqp://guest:guest@localhost:5672"
+    "ConnectionString": "amqp://guest:guest@localhost:5672"
   }
 }
