update ports in compose file

--- a/src/Services/ProductService/Product.API/appsettings.json
+++ b/src/Services/ProductService/Product.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "RabbitMQ": {
-    "ConnectionString": "amqp://guest:guest@localhost:5672"
+    "ConnectionString": "amqp://rabbithost:5672"
   }
 }
