--- a/src/Services/OrderService/Order.API/appsettings.json
+++ b/src/Services/OrderService/Order.API/appsettings.json
@@ -4,10 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
+  },  
   "AllowedHosts": "*",
 
   "RabbitMQ": {
-    "ConnectionString": "amqp://guest:guest@localhost:5672"
+    "ConnectionString": "amqp://rabbithost:5672"
   }
 }
+    
