--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -4,6 +4,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - RabbitMQ__ConnectionString=amqp://rabbithost:5672
     ports:
       - "6001:8080"
       - "6061:8081"
