add elasticsearch + health checks

--- a/src/Services/OrderService/Order.API/appsettings.json
+++ b/src/Services/OrderService/Order.API/appsettings.json
@@ -4,11 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },  
+  },
   "AllowedHosts": "*",
 
   "RabbitMQ": {
     "ConnectionString": "amqp://rabbithost:5672"
+  },
+
+  "ElasticSearch": {
+    "Uri": "http://localhost:9200"
   }
 }
     
