--- a/src/Services/ProductService/Product.API/appsettings.json
+++ b/src/Services/ProductService/Product.API/appsettings.json
@@ -9,5 +9,9 @@
 
   "RabbitMQ": {
     "ConnectionString": "amqp://rabbithost:5672"
+  },
+
+  "ElasticSearch": {
+    "Uri": "http://localhost:9200"
   }
 }
