--- a/src/Services/OrderService/Order.API/Order.API.csproj
+++ b/src/Services/OrderService/Order.API/Order.API.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\Shared.Messaging\Shared.Messaging.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Shared\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
