--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -40,3 +40,26 @@ services:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+
+  elasticsearch:
+    container_name: elastic
+    ports:
+      - 9200:9200
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    networks:
+      - elastic
+
+  kibana:
+    container_name: kibana
+    ports:
+      - 5601:5601
+    depends_on: 
+      - elasticsearch
+    environment: 
+      - ELASTICSEARCH_URL=http://locahost:9200
+    networks:
+      - elastic
