--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -14,3 +14,17 @@ services:
     build:
       context: .
       dockerfile: Services/ProductService/Product.API/Dockerfile
+  
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.0.2
+  
+  kibana:
+    image: docker.elastic.co/kibana/kibana:9.0.2
+        
+
+networks:
+  elastic:
+    driver: bridge
+    
+volumes: 
+   elasticsearch-data:
