--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,5 +1,7 @@
 services:
   order.api:
+    depends_on:
+    - rabbitmq
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
@@ -27,6 +29,8 @@ services:
         - "5672:5672"
         - "15672:15672" 
   product.api:
+    depends_on:
+        - rabbitmq
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
@@ -63,3 +67,20 @@ services:
       - ELASTICSEARCH_URL=http://locahost:9200
     networks:
       - elastic
+
+  yarpgateway:
+    depends_on:
+      - order.api
+      - product.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+    ports:
+      - "5000:8080"
+      - "5001:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
